--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.10)
 project(FibonacciHeap)
 
 set(CMAKE_CXX_STANDARD 11)
-
-add_executable(FibonacciHeap main.cpp)
+set(GLOB SOURCE_FILES *.cpp)
+add_executable(FibonacciHeap main.cpp
+               FiboHeap.cpp FiboHeap.h)
